<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Redialer</string>
	<string name="btnOk">CALL</string>
	<string name="desc">Tips: Click the "STOP" icon to stop redial.</string>
	<string name="phoneNum">Number:</string>
	<string name="looptimes">Times:</string>
	<string name="hintpn">Phone Number to call</string>
	<string name="hinttm">Times to call</string>
	<string name="chDeadloop">Repeat</string>
	<string name="txtFloating">STOP</string>
	<string name="hintstoped">Redailing Stopped</string>
	<string name="menu_about">About</string>
	<string name="item_about">\nGoogle Code:\nhttps://dial-assistant.googlecode.com/\nGithub源码:\nhttps://github.com/gymgle/Redailer</string>
	<string name="version_name">1.3.0.0</string>
</resources>