<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/LinearLayout01"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingLeft="12dp"
	android:paddingRight="12dp"
	android:orientation="vertical">

    <TableLayout
        android:id="@+id/TableLayout01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1" >

        <TableRow
		    android:id="@+id/TableRow01"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content">
			<TextView
			    android:id="@+id/txtPhoneNumber"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:gravity="right"
			    android:text="@string/phoneNum">
			</TextView>
			<EditText
			    android:id="@+id/etPhoneNumber"
			    android:inputType="phone"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/hintpn">
			</EditText>
		</TableRow>

		<TableRow
		    android:id="@+id/TableRow02"
		    android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<TextView
			    android:id="@+id/txtLooptimes"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:gravity="right"
			    android:text="@string/looptimes">
			</TextView>
			<EditText
			    android:id="@+id/etLoopTimes"
			    android:inputType="number"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/hinttm">
			</EditText>
		</TableRow>
    </TableLayout>
    
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:gravity="right"
	    android:paddingRight="12dp" >
		    <CheckBox
		        android:id="@+id/cbDeadLoop"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/chDeadloop" >
			</CheckBox>
	</LinearLayout>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	    	<Button
			    android:id="@+id/btnOk"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:text="@string/btnOk" >
			</Button>
	</LinearLayout>
	
	<TextView
		    android:id="@+id/txtDesc"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:gravity="bottom|center"
		    android:paddingBottom="12dp"
		    android:text="@string/desc" >
	</TextView>

</LinearLayout>